# FlexibleComputerLanguage

./: .gitignore  CMakeLists.txt  Defs.txt  Dockerfile  Jenkinsfile  README.md
Core/: AdditionalFunctions.h  Bool.cpp  Bool.h  CPlusPlusEntry.cpp  CPlusPlusEntry.h  Command.cpp  Command.h  CommonIncludes.h  DateTimeOperations.cpp  DateTimeOperations.h  DefFileReader.cpp  DefFileReader.h  Defs.h  Entity.h  EntityList.cpp  EntityList.h  ExecutionContext.h  ExecutionTemplate.cpp  ExecutionTemplate.h  ExecutionTemplateList.cpp  ExecutionTemplateList.h  Int.h  MemMan.cpp  MemMan.h  MetaData.h  MongoDB.cpp  MongoDB.h  MongoReview.cpp  MongoReview.h  MongoTP.cpp  MongoTP.h  Node.cpp  Node.h  NodeCustomValueShorthand.cpp  Null.h  ProcessLog.h  ScriptReader.cpp  ScriptReader.h  String.h  StringOperations.cpp  (+7 more)
Core/TestCases/: TestCaseBase.cpp  TestCaseBase.h  TestCaseExecuter.cpp  TestCaseExecuter.h  TestCaseIncludes.h  TestCompound1.cpp  TestCompound1.h  TestCustomStrFilterShorthand.cpp  TestCustomStrFilterShorthand.h  TestFilterSubtree.cpp  TestFilterSubtree.h  TestListFilter.cpp  TestListFilter.h  TestListGroupBy.cpp  TestListGroupBy.h  TestListInnerCount.cpp  TestListInnerCount.h  TestListInnerCountWithScript.cpp  TestListInnerCountWithScript.h  TestListSeek.cpp  TestListSeek.h  TestLoadFromCodeLibrary.cpp  TestLoadFromCodeLibrary.h  TestStringEnclosure.cpp  TestStringEnclosure.h  TestTestCase.cpp  TestTestCase.h
Core/TestCases/files/: CodeLibrary1.txt  TestCustomStrFilterShorthandScript.txt  TestCustomStrFilterShorthandScriptDefs.txt  TestFilterSubtreeScript.txt  TestFilterSubtreeScriptDefs.txt  TestInnerCountScript.txt  TestInnerCountScriptDefs.txt  TestListFilterScript.txt  TestListFilterScriptDefs.txt  TestListGroupByScript.txt  TestLoadFromCodeLibraryScript.txt  TestLoadFromCodeLibraryScriptDefs.txt  TestStringEnclosureScript.txt  TestStringEnclosureScriptDefs.txt
FlexibleComputerLanguage/: FlexibleComputerLanguage.1  Logger.h  NamedPipeOperations.cpp  NamedPipeOperations.h  OTPParser.cpp  OTPParser.h  ResultGenerator.cpp  ResultGenerator.h  dotenv.h  main.cpp
FlexibleComputerLanguage.xcodeproj/: project.pbxproj
FlexibleComputerLanguage.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FlexibleComputerLanguage.xcodeproj/xcuserdata/dileepaj.xcuserdatad/xcschemes/: FlexibleComputerLanguage.xcscheme  xcschememanagement.plist
deploy/: hosts  production.yml  qa.yml  staging.yml
